--- a/resources/flights_notebook_job_classic.yml
+++ b/resources/flights_notebook_job_classic.yml
@@ -1,8 +1,8 @@
 # The main job for flights_project
 resources:
   jobs:
-    flights_notebook:
-      name: flights_notebook_job_${bundle.target}
+    flights_notebook_classic:
+      name: flights_notebook_job_classic_${bundle.target}
 
       tasks:
         - task_key: notebook_task
