--- a/resources/flights_notebook_job_serverless.yml
+++ b/resources/flights_notebook_job_serverless.yml
@@ -3,7 +3,8 @@ resources:
   jobs:
     flights_notebook:
       name: flights_notebook_job_${bundle.target}
-
+      max_concurrent_runs: 1
+      
       tasks:
         - task_key: notebook_task
           notebook_task:
