--- a/resources/flights_notebook_job_serverless.yml
+++ b/resources/flights_notebook_job_serverless.yml
@@ -3,28 +3,16 @@ resources:
   jobs:
     flights_notebook:
       name: flights_notebook_job_${bundle.target}
-
+      max_concurrent_runs: 1
+      
       tasks:
         - task_key: notebook_task
-          job_cluster_key: job_cluster
           notebook_task:
             notebook_path: ../flights_main_notebook.py
             base_parameters:
                 catalog: ${var.catalog}
                 database: ${var.database}
-          libraries:
-            - pypi: 
-                package: pytest
           max_retries: 0
-        
-      job_clusters:
-        - job_cluster_key: job_cluster
-          new_cluster:
-            spark_version: 15.3.x-scala2.12
-            node_type_id: m6gd.xlarge
-            autoscale:
-                min_workers: 1
-                max_workers: 2
 
       # schedule:
       #   quartz_cron_expression: '0 30 19 * * ?'
