--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -52,27 +52,17 @@ jobs:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
           DATABRICKS_CLUSTER_ID: ${{ secrets.DATABRICKS_CLUSTER_ID }}
-          # SPARK_REMOTE: ${{secrets.SPARK_REMOTE_TST}}   
         run: |
           pytest tests/ 
-      #-k test_get_flight_schema__valid
-      
-      # - name: Run integration test with dbconnect
-      #   env: 
-      #     SPARK_REMOTE: ${{secrets.SPARK_REMOTE_TST}}
-      #   run: |
-      #     source .venv/bin/activate
-      #     pytest tests/ -m "integration"
       
       - uses: databricks/setup-cli@main
 
       - run: databricks bundle deploy --target test
         env:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
-          DATABRICKS_BUNDLE_ENV: tst
 
-  pipeline_update:
-    name: "Run pipeline update"
+  deploy_and_validate:
+    name: "Run validation job"
     runs-on: ubuntu-latest
     environment: test
     defaults:
@@ -94,4 +84,3 @@ jobs:
           databricks bundle run -t test notebook_validation_job --refresh-all 2>&1 | tee output.log
         env:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
-          DATABRICKS_BUNDLE_ENV: tst
