Updates for github action

--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -61,7 +61,7 @@ jobs:
         env:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
 
-  deploy_and_validate:
+  validate:
     name: "Run validation job"
     runs-on: ubuntu-latest
     environment: test
@@ -78,7 +78,7 @@ jobs:
       - uses: databricks/setup-cli@main
 
       - shell: bash
-        name: Run pipeline update
+        name: Run integration test
         run: |
           set -o pipefail
           databricks bundle run -t test notebook_validation_job --refresh-all 2>&1 | tee output.log
