--- a/resources/flights_notebook_job_classic.yml
+++ b/resources/flights_notebook_job_classic.yml
@@ -21,15 +21,7 @@ resources:
         - job_cluster_key: job_cluster
           new_cluster:
             spark_version: 15.3.x-scala2.12
-            node_type_id: m6gd.xlarge
+            node_type_id: ${var.node_type_id}
             autoscale:
                 min_workers: 1
                 max_workers: 2
-
-      # schedule:
-      #   quartz_cron_expression: '0 30 19 * * ?'
-      #   timezone_id: America/Los_Angeles
-
-      # email_notifications:
-      #   on_failure:
-      #     - fake@example.com
