--- a/resources/dlt/flights_dlt.yml
+++ b/resources/dlt/flights_dlt.yml
@@ -6,7 +6,7 @@ resources:
         var.source_path: /databricks-datasets/airlines
       libraries:
         - notebook:
-            path: /Users/dustin.vannoy@databricks.com/flights-simple/flights_main_dlt
+            path: ../flights_main_dlt
       target: ${var.flights_dlt_schema}
       development: false
       catalog: main
