--- a/resources/dlt/flights_dlt_validation.yml
+++ b/resources/dlt/flights_dlt_validation.yml
@@ -6,9 +6,9 @@ resources:
         var.source_path: /databricks-datasets/airlines/part-00000
       libraries:
         - notebook:
-            path: /Users/dustin.vannoy@databricks.com/flights-simple/flights_main_dlt
+            path: ../flights_main_dlt
         - notebook:
-            path: /Users/dustin.vannoy@databricks.com/flights-simple/tests/integration/flights_dlt_tests
+            path: ../tests/integration/flights_dlt_tests
       target: ${var.flights_test_schema}
       development: false
       catalog: main
