--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -87,11 +87,11 @@ jobs:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
           DATABRICKS_BUNDLE_ENV: tst
 
-      - shell: bash
-        name: Run pipeline validation
-        run: |
-          set -o pipefail
-          databricks bundle run flights_simple_dlt_validation -t test
-        env:
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
-          DATABRICKS_BUNDLE_ENV: tst
+      # - shell: bash
+      #   name: Run pipeline validation
+      #   run: |
+      #     set -o pipefail
+      #     databricks bundle run flights_simple_dlt_validation -t test
+      #   env:
+      #     DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
+      #     DATABRICKS_BUNDLE_ENV: tst
