Comment out wheel build from databricks.yml

--- a/databricks.yml
+++ b/databricks.yml
@@ -8,12 +8,12 @@ bundle:
 include:
   - resources/*.yml
   - resources/dlt/*.yml
-
-artifacts:
-  default:
-    type: whl
-    path: .
-
+  
+## Uncomment below to build wheel as part of bundle
+#artifacts:
+#  default:
+#    type: whl
+#    path: .
 
 variables:
   catalog:
