--- a/resources/flights_notebook_job_classic.yml
+++ b/resources/flights_notebook_job_classic.yml
@@ -12,6 +12,7 @@ resources:
             base_parameters:
                 catalog: ${var.catalog}
                 database: ${var.database}
+                artifact_path: ${workspace.artifact_path}
           libraries:
             - pypi: 
                 package: pytest
@@ -21,8 +22,10 @@ resources:
       job_clusters:
         - job_cluster_key: job_cluster
           new_cluster:
-            spark_version: 15.3.x-scala2.12
+            spark_version: 15.4.x-scala2.12
             node_type_id: ${var.node_type_id}
             autoscale:
                 min_workers: 1
                 max_workers: 2
+            data_security_mode: "USER_ISOLATION"
+
