--- a/resources/dlt/flights_dlt_validation.yml
+++ b/resources/dlt/flights_dlt_validation.yml
@@ -4,9 +4,10 @@ resources:
       name: flights_simple_dlt_validation
       configuration:
         var.source_path: /databricks-datasets/airlines/part-00000
+        artifact_path: /Workspace${workspace.artifact_path}/.internal
       libraries:
         - notebook:
-            path: ../../flights_main_dlt.py
+            path: ../../notebooks/flights_main_dlt.py
         - notebook:
             path: ../../tests/integration/flights_dlt_tests.py
       target: ${var.flights_test_schema}
