Modify to initial changes from the PR which shoudl likely merge

--- a/databricks.yml
+++ b/databricks.yml
@@ -17,21 +17,17 @@ include:
 
 variables:
   catalog:
-    default: "lorenzorubi"
+    default: "main"
   database:
     default: "flights_dev"
   all_purpose_cluster_id:
-    default: "0326-164201-qhvj1pwh"
+    default: ""
   flights_test_schema:
-    default: "flights_test"
+    default: "flights_validation_dev"
   flights_dlt_schema:
     default: "flights_dev"
   node_type_id:
-    default: "Standard_DS4_v2"
-
-artifacts:
-  default:
-    type: whl
+    default: "m6gd.xlarge"
 
 targets:
   # The 'dev' target, used for development purposes.
@@ -43,9 +39,9 @@ targets:
     mode: development
     default: true
     workspace:
-      host: https://adb-984752964297111.11.azuredatabricks.net/
+      host: https://e2-dogfood.staging.cloud.databricks.com/
     variables:
-      all_purpose_cluster_id: "0118-165440-l8erfx3g"
+      all_purpose_cluster_id: 0928-011628-hel2xzoy
 
   test:
     # For staging deployments, we only have a single copy, so we override the
@@ -60,8 +56,9 @@ targets:
       user_name: ${workspace.current_user.userName}
     variables:
       all_purpose_cluster_id: "0725-142209-7jvag949"
+      database: flights_test
       flights_test_schema: flights_validation_test
-      flights_dlt_schema: dustinvannoy_test
+      flights_dlt_schema: flights_test
 
   staging:
     # For staging deployments, we only have a single copy, so we override the
@@ -75,7 +72,8 @@ targets:
     run_as:
       user_name: ${workspace.current_user.userName}
     variables:
-      all_purpose_cluster_id: "0326-164201-qhvj1pwh"
+      all_purpose_cluster_id: "0928-011628-hel2xzoy"
+      database: flights_staging
       flights_test_schema: flights_validation_staging
       flights_dlt_schema: dustinvannoy_staging
 
@@ -94,6 +92,7 @@ targets:
       # To run as service principal use service_principal_name (see Databricks documentation).
       user_name: ${workspace.current_user.userName}
     variables:
-      all_purpose_cluster_id: "0326-164201-qhvj1pwh"
+      all_purpose_cluster_id: "0928-011628-hel2xzoy"
+      database: flights_prod
       flights_test_schema: flights_validation_prod
-      flights_dlt_schema: dustinvannoy_prod
+      flights_dlt_schema: flights_prod
