--- a/databricks.yml
+++ b/databricks.yml
@@ -3,7 +3,7 @@
 # This is a Databricks asset bundle definition for datakickstart_dabs.
 # See https://docs.databricks.com/dev-tools/bundles/index.html for documentation.
 bundle:
-  name: lr_flights_simple
+  name: flights_simple
 
 include:
   - resources/*.yml
@@ -55,7 +55,7 @@ targets:
     run_as:
       user_name: ${workspace.current_user.userName}
     variables:
-      all_purpose_cluster_id: "0725-142209-7jvag949"
+      all_purpose_cluster_id: "0730-172948-runts698"
       database: flights_test
       flights_test_schema: flights_validation_test
       flights_dlt_schema: flights_test
