Refactor structure and remove all purpose cluster

--- a/databricks.yml
+++ b/databricks.yml
@@ -13,21 +13,30 @@ include:
 #artifacts:
 #  default:
 #    type: whl
-#    path: .
+#    path: ./src
 
 variables:
   catalog:
     default: "main"
   database:
     default: "flights_dev"
-  all_purpose_cluster_id:
-    default: ""
   flights_test_schema:
     default: "flights_validation_dev"
   flights_dlt_schema:
     default: "flights_dev"
+  spark_version:
+    default: "15.3.x-scala2.12"
   node_type_id:
     default: "m6gd.xlarge"
+  shared_cluster_config:
+    type: "complex"
+    default:
+      spark_version: ${var.spark_version}
+      node_type_id: ${var.node_type_id}
+      data_security_mode: USER_ISOLATION
+      autoscale:
+          min_workers: 1
+          max_workers: 2
 
 targets:
   # The 'dev' target, used for development purposes.
@@ -40,8 +49,6 @@ targets:
     default: true
     workspace:
       host: https://e2-dogfood.staging.cloud.databricks.com/
-    variables:
-      all_purpose_cluster_id: 0928-011628-hel2xzoy
 
   test:
     # For test/staging deployments, we only have a single copy, so we override the
@@ -55,7 +62,6 @@ targets:
     run_as:
       user_name: ${workspace.current_user.userName}
     variables:
-      all_purpose_cluster_id: "0730-172948-runts698"
       database: flights_test
       flights_test_schema: flights_validation_test
       flights_dlt_schema: flights_test
@@ -68,10 +74,9 @@ targets:
     run_as:
       user_name: ${workspace.current_user.userName}
     variables:
-      all_purpose_cluster_id: "0928-011628-hel2xzoy"
       database: flights_staging
       flights_test_schema: flights_validation_staging
-      flights_dlt_schema: dustinvannoy_staging
+      flights_dlt_schema: flights_staging
 
   # The 'prod' target, used for production deployment.
   prod:
@@ -84,7 +89,6 @@ targets:
       # To run as service principal use service_principal_name (see Databricks documentation).
       user_name: ${workspace.current_user.userName}
     variables:
-      all_purpose_cluster_id: "0928-011628-hel2xzoy"
       database: flights_prod
       flights_test_schema: flights_validation_prod
       flights_dlt_schema: flights_prod
