--- a/resources/dlt/flights_dlt.yml
+++ b/resources/dlt/flights_dlt.yml
@@ -7,7 +7,7 @@ resources:
         artifact_path: /Workspace${workspace.artifact_path}/.internal
       libraries:
         - notebook:
-            path: ../../notebooks/flights_main_dlt.py
+            path: ../../src/flights_main_dlt.py
       target: ${var.flights_dlt_schema}
       development: false
       catalog: main
