--- a/resources/dlt/flights_dlt_validation.yml
+++ b/resources/dlt/flights_dlt_validation.yml
@@ -7,7 +7,7 @@ resources:
         artifact_path: /Workspace${workspace.artifact_path}/.internal
       libraries:
         - notebook:
-            path: ../../notebooks/flights_main_dlt.py
+            path: ../../src/flights_main_dlt.py
         - notebook:
             path: ../../tests/integration/flights_dlt_tests.py
       target: ${var.flights_test_schema}
