--- a/resources/flights_notebook_job_classic.yml
+++ b/resources/flights_notebook_job_classic.yml
@@ -8,15 +8,13 @@ resources:
         - task_key: notebook_task
           job_cluster_key: job_cluster
           notebook_task:
-            notebook_path: ../notebooks/flights_main_notebook.py
+            notebook_path: ../src/flights_main_notebook.py
             base_parameters:
                 catalog: ${var.catalog}
                 database: ${var.database}
-                artifact_path: ${workspace.artifact_path}
           libraries:
             - pypi: 
                 package: pytest
-            - whl: ../dist/*.whl
           max_retries: 0
         
       job_clusters:
@@ -24,8 +22,7 @@ resources:
           new_cluster:
             spark_version: 15.4.x-scala2.12
             node_type_id: ${var.node_type_id}
+            data_security_mode: USER_ISOLATION
             autoscale:
                 min_workers: 1
                 max_workers: 2
-            data_security_mode: "USER_ISOLATION"
-
