--- a/resources/dlt/flights_dlt_validation.yml
+++ b/resources/dlt/flights_dlt_validation.yml
@@ -4,7 +4,7 @@ resources:
       name: flights_simple_dlt_validation
       configuration:
         var.source_path: /databricks-datasets/airlines/part-00000
-        artifact_path: /Workspace${workspace.artifact_path}/.internal
+        artifact_path: /Workspace${workspace.file_path}/src
       libraries:
         - notebook:
             path: ../../src/flights_main_dlt.py
