--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -42,7 +42,7 @@ jobs:
       - run: python -m pip install --upgrade pip
       - run: pip install wheel
       - run: pip3 install wheel
-      - run: pip install -r requirements.txt
+      - run: pip install -r requirements.txt dev-requirements.txt
 
       #----------------------------------------------
       #              run test suite
