--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -40,9 +40,7 @@ jobs:
           python-version: '3.10'
       #    cache: 'pip' # caching pip dependencies
       - run: python -m pip install --upgrade pip
-      - run: pip install wheel
-      - run: pip3 install wheel
-      - run: pip install -r requirements.txt dev-requirements.txt
+      - run: pip install -r requirements.txt -r dev-requirements.txt
 
       #----------------------------------------------
       #              run test suite
