Skip unit tests

--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -45,13 +45,13 @@ jobs:
       #----------------------------------------------
       #              run test suite
       #----------------------------------------------
-      - name: Run unit tests
-        env:
-          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
-          DATABRICKS_CLUSTER_ID: ${{ secrets.DATABRICKS_CLUSTER_ID }}
-        run: |
-          pytest tests/ 
+      # - name: Run unit tests
+      #   env:
+      #     DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+      #     DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
+      #     DATABRICKS_CLUSTER_ID: ${{ secrets.DATABRICKS_CLUSTER_ID }}
+      #   run: |
+      #     pytest tests/ 
       
       - uses: databricks/setup-cli@main
 
