--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -15,12 +15,12 @@ on:
       - "**/*.yml"
       - "**/*.py"
 
-  push:
-    branches:
-      - feature/20240808
-    paths:
-      - "**/*.yml"
-      - "**/*.py"
+  # push:
+  #   branches:
+  #     - feature/yyyymmdd
+  #   paths:
+  #     - "**/*.yml"
+  #     - "**/*.py"
 
 jobs:
   deploy:
