--- a/resources/flights_notebook_job_classic.yml
+++ b/resources/flights_notebook_job_classic.yml
@@ -8,7 +8,7 @@ resources:
         - task_key: notebook_task
           job_cluster_key: job_cluster
           notebook_task:
-            notebook_path: ../flights_main_notebook.py
+            notebook_path: ../src/flights_main_notebook.py
             base_parameters:
                 catalog: ${var.catalog}
                 database: ${var.database}
@@ -20,16 +20,9 @@ resources:
       job_clusters:
         - job_cluster_key: job_cluster
           new_cluster:
-            spark_version: 15.3.x-scala2.12
-            node_type_id: m6gd.xlarge
+            spark_version: 15.4.x-scala2.12
+            node_type_id: ${var.node_type_id}
+            data_security_mode: USER_ISOLATION
             autoscale:
                 min_workers: 1
                 max_workers: 2
-
-      # schedule:
-      #   quartz_cron_expression: '0 30 19 * * ?'
-      #   timezone_id: America/Los_Angeles
-
-      # email_notifications:
-      #   on_failure:
-      #     - fake@example.com
