--- a/resources/notebook_validation_job.yml
+++ b/resources/notebook_validation_job.yml
@@ -5,9 +5,12 @@ resources:
 
       tasks:
         - task_key: setup_task
-          existing_cluster_id: ${var.all_purpose_cluster_id}
+          job_cluster_key: job_cluster
           notebook_task:
-            notebook_path: ../tests/integration/setup_notebook.ipynb
+            notebook_path: ../tests/integration/setup_notebook.py
+            base_parameters:
+                catalog: ${var.catalog}
+                database: ${var.flights_test_schema}
           max_retries: 0
         
         - task_key: notebook_job
@@ -16,18 +19,27 @@ resources:
           run_job_task:
             job_id: ${resources.jobs.flights_notebook.id}
             job_parameters:
-              catalog: main
-              database: flights_test
+              catalog: ${var.catalog}
+              database: ${var.flights_test_schema}
           max_retries: 0
           
         - task_key: validation_task
           depends_on:
             - task_key: notebook_job
-          existing_cluster_id: ${var.all_purpose_cluster_id}
+          job_cluster_key: job_cluster
           notebook_task:
-            notebook_path: ../tests/integration/validation_notebook.ipynb
+            notebook_path: ../tests/integration/validation_notebook.py
+            base_parameters:
+                catalog: ${var.catalog}
+                database: ${var.flights_test_schema}
           max_retries: 0
       
-      permissions:
-        - level: IS_OWNER
-          user_name: dustin.vannoy@databricks.com
+      job_clusters:
+        - job_cluster_key: job_cluster
+          new_cluster:
+            spark_version: 15.4.x-scala2.12
+            node_type_id: ${var.node_type_id}
+            data_security_mode: USER_ISOLATION
+            autoscale:
+                min_workers: 1
+                max_workers: 2
