--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -15,12 +15,12 @@ on:
       - "**/*.yml"
       - "**/*.py"
 
-  push:
-    branches:
-      - fix/20241020
-    paths:
-      - "**/*.yml"
-      - "**/*.py"
+  # push:
+  #   branches:
+  #     - fix/yyyymmdd
+  #   paths:
+  #     - "**/*.yml"
+  #     - "**/*.py"
 
 jobs:
   deploy:
