DLT duplicate target name fix (#18)
* Add target to dlt piplines

--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -17,7 +17,7 @@ on:
 
   # push:
   #   branches:
-  #     - feature/yyyymmdd
+  #     - fix/yyyymmdd
   #   paths:
   #     - "**/*.yml"
   #     - "**/*.py"
